[gd_scene load_steps=12 format=3 uid="uid://dy3aivodhggm8"]

[ext_resource type="PackedScene" uid="uid://fgcymui4ijkl" path="res://player.tscn" id="1_i7lni"]
[ext_resource type="Script" path="res://Main.gd" id="1_wmo01"]
[ext_resource type="PackedScene" uid="uid://qpl5wcgudau0" path="res://mob.tscn" id="2_30my5"]
[ext_resource type="FontFile" uid="uid://beud5ftmpvc3x" path="res://fonts/Montserrat-Medium.ttf" id="4_8gbjh"]
[ext_resource type="Script" path="res://ScoreLabel.gd" id="5_nevox"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6w6cu"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_qri4h"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uitcd"]
albedo_color = Color(0.140401, 0.4784, 0.287736, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_nnx8v"]
material = SubResource("StandardMaterial3D_uitcd")

[sub_resource type="Curve3D" id="Curve3D_lnttd"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -12.9999, 0, -14.0496, 0, 0, 0, 0, 0, 0, -13.0807, 0, 14.9378, 0, 0, 0, 0, 0, 0, 12.9999, 0, 14.9378, 0, 0, 0, 0, 0, 0, 12.9192, 0, -14.1304, 0, 0, 0, 0, 0, 0, -12.9999, 0, -14.0496),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_ghcby"]
default_font = ExtResource("4_8gbjh")
default_font_size = 22

[node name="Main" type="Node"]
script = ExtResource("1_wmo01")
mob_scene = ExtResource("2_30my5")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_6w6cu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_qri4h")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.0150616, 0.999887, 0, -0.999887, -0.0150616, 0, 5.04505, 0)

[node name="Player" parent="." instance=ExtResource("1_i7lni")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707131, 0.707082, 0, -0.707082, 0.707131, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19)
projection = 1
size = 19.0

[node name="Cylinder" type="Node3D" parent="."]

[node name="MeshInstance" type="MeshInstance3D" parent="Cylinder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, -14)
mesh = SubResource("CylinderMesh_nnx8v")

[node name="MeshInstance2" type="MeshInstance3D" parent="Cylinder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 15)
mesh = SubResource("CylinderMesh_nnx8v")

[node name="MeshInstance3" type="MeshInstance3D" parent="Cylinder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, -14)
mesh = SubResource("CylinderMesh_nnx8v")

[node name="MeshInstance4" type="MeshInstance3D" parent="Cylinder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, 15)
mesh = SubResource("CylinderMesh_nnx8v")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_lnttd")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.999996, 0, 0.0027875, 0, 1, 0, -0.0027875, 0, -0.999996, -12.9999, 0, -14.0496)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ghcby")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 86.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("5_nevox")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.298039)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 0
offset_left = 251.0
offset_top = 258.0
offset_right = 472.0
offset_bottom = 286.0
text = "Press Enter to Retry"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
